feat: adiciona métodos adicionais além do CRUD em serviços
- Adiciona métodos específicos no UserService:
  - updatePartial: atualização parcial de usuários
  - activate: ativa um usuário
  - deactivate: desativa um usuário

- Adiciona métodos no RestaurantTableService:
  - reserveTable: reserva uma mesa
  - occupyTable: ocupa uma mesa
  - releaseTable: libera uma mesa
  - listAvailableTables: lista mesas disponíveis

- Adiciona métodos no OrderItemService:
  - listByOrderId: lista itens de pedido por ID da comanda